# query-completion

./: CMakeLists.txt  README.md
lib/: lib.md
lib/correcter/: correcter.h
lib/parser/: parser.h
lib/suggestion/: suggestion.h
logs/: пословицы
source/: correcter.cpp  parser.cpp  suggestion.cpp
suggest/: suggest.cpp  suggest.md
